dev/scss/_resets.scss
@charset "utf-8";

/* Resets */
html {
	box-sizing: border-box;
	// overflow-x: hidden;
}
*, *:before, *:after {
    box-sizing: inherit;
}
/* Image reset */
img {
    max-width: 100%;
    height: auto;
    vertical-align: bottom;
}

* {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

html,body {
    padding: 0;
    margin: 0;
    background-color:#fffefe;
}

